Add Tech-Video 2

--- a/en/index.html
+++ b/en/index.html
@@ -463,12 +463,12 @@
                         <img src="../assets/regular expressions - validations.jpg" alt="Tech #1">
                     </a>
                 </article>
-                <!--
                 <article class="article-tech">
-                    <a href="https://youtu.be/gcUP6abUbAw?si=peznPe4T6ck0XtNO" class="demo-card" target="_blank" rel="noopener">
-                        <img src="assets/regular-expressions-processing.jpg" alt="Tech #2">
+                    <a href="https://youtu.be/sO7_7fkrONU" class="demo-card" target="_blank" rel="noopener">
+                        <img src="../assets/regular-expressions-processing.jpg" alt="Tech #2">
                     </a>
                 </article>
+                <!--
                 <article class="article-tech">
                     <a href="https://youtu.be/gcUP6abUbAw?si=peznPe4T6ck0XtNO" class="demo-card" target="_blank" rel="noopener">
                         <img src="assets/spreadsheets.jpg" alt="Tech #2">
