Add Tech Article - Generation PDF

--- a/index.html
+++ b/index.html
@@ -466,6 +466,11 @@
                         <img src="assets/regular-expressions-processing.jpg" alt="Tech #2">
                     </a>
                 </article>
+                <article class="article-tech">
+                    <a href="https://youtu.be/q1NKIaTdPYw" class="demo-card" target="_blank" rel="noopener">
+                        <img src="assets/pdf-generation.jpg" alt="Tech #2">
+                    </a>
+                </article>
                 <!--
                 <article class="article-tech">
                     <a href="https://youtu.be/gcUP6abUbAw?si=peznPe4T6ck0XtNO" class="demo-card" target="_blank" rel="noopener">
@@ -475,11 +480,6 @@
                 <article class="article-tech">
                     <a href="https://youtu.be/gcUP6abUbAw?si=peznPe4T6ck0XtNO" class="demo-card" target="_blank" rel="noopener">
                         <img src="assets/word-generation.jpg" alt="Tech #2">
-                    </a>
-                </article>
-                <article class="article-tech">
-                    <a href="https://youtu.be/gcUP6abUbAw?si=peznPe4T6ck0XtNO" class="demo-card" target="_blank" rel="noopener">
-                        <img src="assets/pdf-generation.jpg" alt="Tech #2">
                     </a>
                 </article>
                 -->
