Add pdf-generation tech-video

--- a/en/index.html
+++ b/en/index.html
@@ -473,15 +473,15 @@
                         <img src="../assets/pdf-generation.jpg" alt="Tech #2">
                     </a>
                 </article>
+                <article class="article-tech">
+                    <a href="https://youtu.be/aqHBhXIkajo" class="demo-card" target="_blank" rel="noopener">
+                        <img src="../assets/word-generation.jpg" alt="Tech #2">
+                    </a>
+                </article>
                 <!--
                 <article class="article-tech">
                     <a href="https://youtu.be/gcUP6abUbAw?si=peznPe4T6ck0XtNO" class="demo-card" target="_blank" rel="noopener">
                         <img src="assets/spreadsheets.jpg" alt="Tech #2">
-                    </a>
-                </article>
-                <article class="article-tech">
-                    <a href="https://youtu.be/gcUP6abUbAw?si=peznPe4T6ck0XtNO" class="demo-card" target="_blank" rel="noopener">
-                        <img src="assets/word-generation.jpg" alt="Tech #2">
                     </a>
                 </article>
                 -->
