Add video-tech spreadsheets

--- a/en/index.html
+++ b/en/index.html
@@ -470,21 +470,19 @@
                 </article>
                 <article class="article-tech">
                     <a href="https://youtu.be/q1NKIaTdPYw" class="demo-card" target="_blank" rel="noopener">
-                        <img src="../assets/pdf-generation.jpg" alt="Tech #2">
+                        <img src="../assets/pdf-generation.jpg" alt="Tech #3">
                     </a>
                 </article>
                 <article class="article-tech">
                     <a href="https://youtu.be/aqHBhXIkajo" class="demo-card" target="_blank" rel="noopener">
-                        <img src="../assets/word-generation.jpg" alt="Tech #2">
+                        <img src="../assets/word-generation.jpg" alt="Tech #4">
                     </a>
                 </article>
-                <!--
                 <article class="article-tech">
-                    <a href="https://youtu.be/gcUP6abUbAw?si=peznPe4T6ck0XtNO" class="demo-card" target="_blank" rel="noopener">
-                        <img src="assets/spreadsheets.jpg" alt="Tech #2">
+                    <a href="https://youtu.be/v0atPxVtPAc" class="demo-card" target="_blank" rel="noopener">
+                        <img src="../assets/spreadsheets.jpg" alt="Tech #5">
                     </a>
                 </article>
-                -->
             </div>
         </div>
     </section>
