Add tech #6 Replace video #4 by text area

--- a/index.html
+++ b/index.html
@@ -202,10 +202,13 @@
                      </div>
                     </aside>
                 </a>
-                <video width="100%" height="auto" controls class="video-area">
-                    <source src="assets/es/demo4.mp4" type="video/mp4">
-                    Tu navegador no soporta la exposicion de video.
-                </video>   
+                <div class="text-area">
+                    <p>El presente demo trata de una versión simplificada de una <b>aplicación de tableros electrónicos</b>, tal cual podemos encontrar por ejemplo en los aeropuertos, estaciones de tren, de micros, o puertos, y que básicamente expone a los usuarios de los servicios, a modo informativo, los arribos y salidas de los diferentes transportes. </p>
+                    <p>Para soportar esta funcionalidad, hemos creado tres aplicaciones que interactúan entre sí, las cuales se comunican mediante <b>Sockets</b> y <b>REST APIs</b>.</p>
+                    <p>Al posicionarnos en la parte izquierda de la pantalla se expondrá una lista de las tecnologías implicadas en este demo. Al realizar click sobre la imagen se mostrarán los links al canal de youtube y al repositorio de GitHub. Podrán hacer click sobre los mismos para acceder en forma directa.</p>
+                    <p>El demo presenta una introducción a la idea a desarrollar. Luego se ofrece una vista de la arquitectura aplicativa, dando lugar a la presentación técnica de la solución a alto nivel, para finalmente hacer funcionar la misma,  analizando internamente cada parte relevante de la misma y su comportamiento</p>
+                    <p>Espero que esta propuesta sea de tu agrado. Muchas gracias.</p>
+                </div>        
             </article>
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-5" class="demo-card">
@@ -479,6 +482,11 @@
                 <article class="article-tech">
                     <a href="https://youtu.be/v0atPxVtPAc" class="demo-card" target="_blank" rel="noopener">
                         <img src="assets/spreadsheets.jpg" alt="Tech #5">
+                    </a>
+                </article>
+                <article class="article-tech">
+                    <a href="https://youtu.be/KV0aFX90IW0" class="demo-card" target="_blank" rel="noopener">
+                        <img src="assets/task-manager-scheduler.jpg" alt="Tech #6">
                     </a>
                 </article>
             </div>
