--- a/index.html
+++ b/index.html
@@ -234,6 +234,30 @@
                     <p>Espero que esta propuesta sea de tu agrado. Muchas gracias.</p>
                 </div>            
             </article>        
+            <article class="demos-space demo-lg-block demo-article">
+                <a href="#demo-6" class="demo-card">
+                    <img src="assets/crud-serveless.jpg" alt="Demo #6">
+                    <aside class="demo-card-info">
+                        <div>
+                            <h3>Demo #6</h3>
+                            <p>
+                                <b>Administración Recursos Humanos</b> -  Publicación: 06/2024
+                            </p>
+                            <p>
+                               <b>Tecnologías: </b>Node.js, Serveless, Documentdb, AWS Lambda Functions.
+                            </p>
+                        </div>
+                    </aside>
+                </a>
+                <div class="text-area">
+                    <p>El presente demo toma como base una <b>aplicación de recursos humanos</b>, donde se pone el foco en el mantenimiento de datos básicos del empleado . </p>
+                    <p>La funcionalidad mencionada es solo un caso de aplicación que nos permitirá abordar el tema de fondo de este demo, el cual consiste en realizar un caso práctico de desarrollo utilizando el <b>Framework Serveless</b> en un entorno local aplicando  <b>AWS Lambda Functions</b>, y utilizando como base de datos <b>Dynamodb</b> en forma local.</p>
+                    <p>Para soportar esta funcionalidad, hemos creado dos aplicaciones que interactúan entre sí, las cuales se comunican mediante REST APIs, una resuelve la parte del BackEnd y otra el FrontEnd.</p>
+                    <p>Al posicionarnos en la parte izquierda de la pantalla se expondrá una lista de las tecnologías implicadas en este demo. Al realizar click sobre la imagen se mostrarán los links al canal de youtube y al repositorio de GitHub. Podrán hacer click sobre los mismos para acceder en forma directa.</p>
+                    <p>El demo presenta una introducción a la idea a desarrollar. Luego se ofrece una vista de la arquitectura aplicativa, se realiza la corrida de los procesos, analizando internamente cada parte relevante de la solución.</p>
+                    <p>Espero que esta propuesta sea de tu agrado. Muchas gracias.</p>
+                </div>            
+            </article>        
         </div>
     </section>
     <article class="modal" id="demo-1">
@@ -454,6 +478,50 @@
             </article>
         </div>
     </article>
+
+    <article class="modal" id="demo-6">
+        <div class="modal-content">
+            <a href="#close" class="modal-close">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10.9394 12L8.81844 9.879C8.68183 9.73755 8.60623 9.5481 8.60794 9.35145C8.60965 9.15481 8.68852 8.9667 8.82758 8.82764C8.96664 8.68859 9.15474 8.60971 9.35139 8.608C9.54804 8.60629 9.73749 8.68189 9.87894 8.81851L11.9999 10.9395L14.1209 8.81851C14.1901 8.74687 14.2729 8.68974 14.3644 8.65043C14.4559 8.61112 14.5543 8.59043 14.6539 8.58957C14.7535 8.5887 14.8522 8.60768 14.9444 8.64539C15.0366 8.6831 15.1203 8.73879 15.1907 8.80921C15.2612 8.87963 15.3168 8.96337 15.3546 9.05554C15.3923 9.14771 15.4112 9.24647 15.4104 9.34606C15.4095 9.44564 15.3888 9.54406 15.3495 9.63556C15.3102 9.72706 15.2531 9.80982 15.1814 9.879L13.0604 12L15.1814 14.121C15.2531 14.1902 15.3102 14.2729 15.3495 14.3645C15.3888 14.456 15.4095 14.5544 15.4104 14.654C15.4112 14.7535 15.3923 14.8523 15.3546 14.9445C15.3168 15.0366 15.2612 15.1204 15.1907 15.1908C15.1203 15.2612 15.0366 15.3169 14.9444 15.3546C14.8522 15.3923 14.7535 15.4113 14.6539 15.4104C14.5543 15.4096 14.4559 15.3889 14.3644 15.3496C14.2729 15.3103 14.1901 15.2531 14.1209 15.1815L11.9999 13.0605L9.87894 15.1815C9.73749 15.3181 9.54804 15.3937 9.35139 15.392C9.15474 15.3903 8.96664 15.3114 8.82758 15.1724C8.68852 15.0333 8.60965 14.8452 8.60794 14.6486C8.60623 14.4519 8.68183 14.2625 8.81844 14.121L10.9394 12Z" fill="black"/>
+                    <path d="M12 21C13.1819 21 14.3522 20.7672 15.4442 20.3149C16.5361 19.8626 17.5282 19.1997 18.364 18.364C19.1997 17.5282 19.8626 16.5361 20.3149 15.4442C20.7672 14.3522 21 13.1819 21 12C21 10.8181 20.7672 9.64778 20.3149 8.55585C19.8626 7.46392 19.1997 6.47177 18.364 5.63604C17.5282 4.80031 16.5361 4.13738 15.4442 3.68508C14.3522 3.23279 13.1819 3 12 3C9.61305 3 7.32387 3.94821 5.63604 5.63604C3.94821 7.32387 3 9.61305 3 12C3 14.3869 3.94821 16.6761 5.63604 18.364C7.32387 20.0518 9.61305 21 12 21V21ZM12 22.5C9.21523 22.5 6.54451 21.3938 4.57538 19.4246C2.60625 17.4555 1.5 14.7848 1.5 12C1.5 9.21523 2.60625 6.54451 4.57538 4.57538C6.54451 2.60625 9.21523 1.5 12 1.5C14.7848 1.5 17.4555 2.60625 19.4246 4.57538C21.3938 6.54451 22.5 9.21523 22.5 12C22.5 14.7848 21.3938 17.4555 19.4246 19.4246C17.4555 21.3938 14.7848 22.5 12 22.5Z" fill="black"/>
+                </svg>
+            </a>
+            <article class="demo-modal">
+                <img class="demo-image" src="assets/modal-image.jpg" alt="Modal">
+                <div class="demo-info">
+                    <h3>DEMO Administración de Recursos Humanos</h3>
+                    <p>Contenido compartido en los siguientes medios digitales:</p>
+                    <aside class="demo-details">
+
+                        <a href="https://github.com/mspano-web/crud-serverless" target="_blank" rel="noopener">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.026 2C6.517 2 2.052 6.465 2.052 11.974C2.052 16.38 4.909 20.119 8.873 21.439C9.372 21.529 9.552 21.222 9.552 20.958C9.552 20.721 9.544 20.093 9.541 19.262C6.766 19.864 6.18 17.924 6.18 17.924C5.728 16.772 5.073 16.465 5.073 16.465C4.168 15.846 5.142 15.86 5.142 15.86C6.144 15.93 6.669 16.888 6.669 16.888C7.559 18.412 9.005 17.972 9.571 17.717C9.662 17.072 9.922 16.632 10.206 16.383C7.992 16.132 5.664 15.276 5.664 11.453C5.664 10.366 6.053 9.474 6.688 8.778C6.587 8.525 6.242 7.51 6.787 6.138C6.787 6.138 7.624 5.869 9.529 7.159C10.3426 6.93767 11.1818 6.8247 12.025 6.823C12.8682 6.82437 13.7075 6.93735 14.521 7.159C16.427 5.868 17.263 6.138 17.263 6.138C17.808 7.51 17.466 8.525 17.362 8.778C18.002 9.474 18.386 10.365 18.386 11.453C18.386 15.286 16.056 16.128 13.834 16.375C14.189 16.683 14.509 17.291 14.509 18.221C14.509 19.555 14.497 20.631 14.497 20.958C14.497 21.225 14.675 21.535 15.184 21.437C19.146 20.115 22 16.379 22 11.974C22 6.465 17.535 2 12.026 2Z" fill="black"/>
+                            </svg>
+                            <small><b>Github</b></small>
+                        </a>
+
+                        <a href="https://youtu.be/InyZ7gQ_c4M" target="_blank" rel="noopener">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_14_56)">
+                                <path d="M23.4697 3.74333C23.3321 3.01981 23.0635 2.36019 22.6909 1.83017C22.3182 1.30015 21.8544 0.918215 21.3457 0.7224C19.4833 0 11.9876 0 11.9876 0C11.9876 0 4.49152 0.0218666 2.62909 0.744267C2.12035 0.940093 1.65656 1.32205 1.28391 1.85209C0.911253 2.38214 0.642732 3.04178 0.505086 3.76533C-0.0582574 8.47173 -0.276789 15.6432 0.520555 20.1613C0.658215 20.8849 0.926742 21.5445 1.2994 22.0745C1.67205 22.6045 2.13583 22.9865 2.64456 23.1823C4.50699 23.9047 12.0029 23.9047 12.0029 23.9047C12.0029 23.9047 19.4986 23.9047 21.361 23.1823C21.8697 22.9865 22.3335 22.6045 22.7062 22.0745C23.0789 21.5445 23.3474 20.8849 23.4851 20.1613C24.0793 15.4483 24.2624 8.28133 23.4697 3.74347V3.74333Z" fill="#FF0000"/>
+                                <path d="M9.60205 17.0746L15.8203 11.9522L9.60205 6.82983V17.0746Z" fill="white"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_14_56">
+                                <rect width="24" height="24" fill="white"/>
+                                </clipPath>
+                                </defs>
+                            </svg>
+                            <small><b>Youtube Play List</b></small>
+
+                        </a>
+                    </aside>
+                </div>
+            </article>
+        </div>
+    </article>
+
     <section id="videos-tech"  >
         <div >
             <h2 class="section-title">Videos Tech</h2>
