Dema#3 Text Mode

--- a/en/index.html
+++ b/en/index.html
@@ -182,10 +182,15 @@
                         </div>
                     </aside>
                 </a>
-                <video width="100%" height="auto" controls class="video-area">
-                    <source src="../assets/en/demo3.mov" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>   
+                <div class="text-area">
+                    <p>This demo is about a reduced version of a <b>merchandise distribution application</b>, the focus is on the <b>BackEnd</b> within a <b>distributed processing scheme</b> known as <b>micro services</b>.</p>
+                    <p>Although conceptually the idea is simple, at a technological level it raises certain considerations and challenges.</p>
+                    <p>On the left side of the screen, a list of technologies involved in this demo will be displayed. By clicking on the image, links to the YouTube channel and GitHub repository will be shown. You can click on them to access them directly.</p>
+                    <p>The demo presents an introduction that provides a thematic and technological framework, and then advances on the application of various technologies that are applied.</p>
+                    <p>The topics will be discussed both at a conceptual level and at a programming code level, carrying out functional tests for this purpose.</p>
+                    <p>As a closing we will obtain a basic operational application in the development environment.</p>
+                    <p>I hope you find this proposal interesting. Thank you very much.</p>
+                </div>
             </article>
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-4" class="demo-card">
@@ -202,13 +207,6 @@
                      </div>
                     </aside>
                 </a>
-                <div class="text-area">
-                    <p>This demo is a simplified version of an <b>electronic board application</b>, such as we can find for example in airports, train stations, bus stations, or ports, and which basically exposes the users of the services, for information purposes, the arrivals and departures of the different transports. </p>
-                    <p>To support this functionality, we have created three applications that interact with each other, which communicate using <b>Sockets</b> and <b>REST APIs</b>.</p>
-                    <p>On the left side of the screen, a list of technologies involved in this demo will be displayed. By clicking on the image, links to the YouTube channel and GitHub repository will be shown. You can click on them to access them directly.</p>
-                    <p>The demo presents an introduction to the idea to be developed. Then a view of the application architecture is offered, giving rise to the technical presentation of the solution at a high level, to finally make it work, internally analyzing each relevant part of it and its behavior.</p>
-                    <p>I hope you find this proposal interesting. Thank you very much.</p>
-                </div>
             </article> 
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-5" class="demo-card">
