--- a/index.html
+++ b/index.html
@@ -182,10 +182,15 @@
                      </div>
                     </aside>
                 </a>
-                <video width="100%" height="auto" controls class="video-area">
-                    <source src="assets/es/demo3.mov" type="video/mp4">
-                    Tu navegador no soporta la exposicion de video.
-                </video>   
+                <div class="text-area">
+                    <p>El presente demo trata de una versión reducida de una <b>aplicación de distribución de mercadería</b>, el foco esta puesto en el <b>BackEnd</b> dentro de un esquema de <b>procesamiento distribuido</b> conocido como <b>micro servicios</b></p>
+                    <p>Si bien conceptualmente la idea es sencilla, a nivel tecnológico plantea ciertas consideraciones y desafíos.</p>
+                    <p>Al posicionarnos en la parte izquierda de la pantalla se expondrá una lista de las tecnologías implicadas en este demo. Al realizar click sobre la imagen se mostrarán los links al canal de youtube y al repositorio de GitHub. Podrán hacer click sobre los mismos para acceder en forma directa.</p>
+                    <p>El demo presenta una introducción que provee un marco temático y tecnológico, para luego avanzar sobre la aplicación de diversas tecnologías que se encuentran aplicadas.</p>
+                    <p>Se tratarán los temas tanto a nivel conceptual, como a nivel código de programación, realizando a tal efecto pruebas de funcionamiento.</p>
+                    <p>Como cierre obtendremos una aplicación básica operativa en el entorno de desarrollo.</p>
+                    <p>Espero que esta propuesta sea de tu agrado. Muchas gracias.</p>
+                </div>  
             </article>
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-4" class="demo-card">
