Dema#3 Text area en

--- a/en/index.html
+++ b/en/index.html
@@ -207,6 +207,13 @@
                      </div>
                     </aside>
                 </a>
+                <div class="text-area">
+                    <p>This demo is a simplified version of an <b>electronic board application</b>, such as we can find for example in airports, train stations, bus stations, or ports, and which basically exposes the users of the services, for information purposes, the arrivals and departures of the different transports. </p>
+                    <p>To support this functionality, we have created three applications that interact with each other, which communicate using <b>Sockets</b> and <b>REST APIs</b>.</p>
+                    <p>On the left side of the screen, a list of technologies involved in this demo will be displayed. By clicking on the image, links to the YouTube channel and GitHub repository will be shown. You can click on them to access them directly.</p>
+                    <p>The demo presents an introduction to the idea to be developed. Then a view of the application architecture is offered, giving rise to the technical presentation of the solution at a high level, to finally make it work, internally analyzing each relevant part of it and its behavior.</p>
+                    <p>I hope you find this proposal interesting. Thank you very much.</p>
+                </div>
             </article> 
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-5" class="demo-card">
