Replace video by Text in Demo #2

--- a/en/index.html
+++ b/en/index.html
@@ -127,6 +127,7 @@
             <h2 class="section-title">
                 Demos
             </h2>
+            <h4 class="section-sub-title">Position your mouse over the image on the left to see the technologies involved in each Demo. Click on it to access the documentation.</h4>
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-1" class="demo-card">
                     <img src="../assets/minidev.jpg" alt="Demo #1">
@@ -162,11 +163,19 @@
                     </div>
                 </aside>
             </a>
-            <video width="100%" height="auto" controls class="video-area">
-                <source src="../assets/en/demo2.mov" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>   
-            </article>
+            <div class="text-area">
+                <p>This demo develops a reduced version of a <b>sales panel</b>.</p>
+                <p>It contains two simple <b>functionalities</b>:</p>
+                <ul>
+                    <li><b>Dashboard</b></li>
+                    <li><b>Management of Sales Branch and Sales Representative Information</b></li>
+                </ul>
+                <p>The <b>focus</b> is on the expansion of the technological base presented in the first demo on this page. </p>
+                <p>The proposal offers us a <b>varied menu of technologies</b> that have been integrated to provide this solution. </p>
+                <p>It is presented from the global vision of the application architecture to implementation details, explaining in each step how the software technologies used in both the BackEnd and the FrontEnd have been applied.</p>
+                <p>I hope you find this proposal interesting.</p>
+                <p>Thank you very much.</p>
+            </div>            </article>
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-3" class="demo-card">
                     <img src="../assets/minidev-logistic.png" alt="Demo #3">
@@ -189,7 +198,8 @@
                     <p>The demo presents an introduction that provides a thematic and technological framework, and then advances on the application of various technologies that are applied.</p>
                     <p>The topics will be discussed both at a conceptual level and at a programming code level, carrying out functional tests for this purpose.</p>
                     <p>As a closing we will obtain a basic operational application in the development environment.</p>
-                    <p>I hope you find this proposal interesting. Thank you very much.</p>
+                    <p>I hope you find this proposal interesting.</p>
+                    <p>Thank you very much.</p>
                 </div>
             </article>
             <article class="demos-space demo-lg-block demo-article">
@@ -212,7 +222,8 @@
                     <p>To support this functionality, we have created three applications that interact with each other, which communicate using <b>Sockets</b> and <b>REST APIs</b>.</p>
                     <p>On the left side of the screen, a list of technologies involved in this demo will be displayed. By clicking on the image, links to the YouTube channel and GitHub repository will be shown. You can click on them to access them directly.</p>
                     <p>The demo presents an introduction to the idea to be developed. Then a view of the application architecture is offered, giving rise to the technical presentation of the solution at a high level, to finally make it work, internally analyzing each relevant part of it and its behavior.</p>
-                    <p>I hope you find this proposal interesting. Thank you very much.</p>
+                    <p>I hope you find this proposal interesting.</p>
+                    <p>Thank you very much.</p>
                 </div>
             </article> 
             <article class="demos-space demo-lg-block demo-article">
@@ -237,7 +248,8 @@
                     <p>To support this functionality, we have created four applications that interact with each other, communicating via Kafka and REST APIs.</p>
                     <p>On the left side of the screen, a list of technologies involved in this demo will be displayed. By clicking on the image, links to the YouTube channel and GitHub repository will be shown. You can click on them to access them directly.</p>
                     <p>The demo presents an introduction to the idea to be developed. Then, it offers a view of the application architecture, runs the processes, analyzes the results, and examines each relevant part of the solution internally, presenting success cases and exploring different failure and recovery scenarios.</p>
-                    <p>I hope you find this proposal interesting. Thank you very much.</p>
+                    <p>I hope you find this proposal interesting.</p>
+                    <p>Thank you very much.</p>
                 </div>
             </article>        
             <article class="demos-space demo-lg-block demo-article">
@@ -261,7 +273,8 @@
                     <p>To support this functionality, we have created two applications that interact with each other, which communicate through REST APIs, one resolves the BackEnd part and the other the FrontEnd.</p>
                     <p>By positioning ourselves on the left side of the screen, a list of the technologies involved in this demo will be displayed. When you click on the image, the links to the YouTube channel and the GitHub repository will be displayed. You can click on them to access directly.</p>
                     <p>The demo presents an introduction to the idea to be developed. Then a view of the application architecture is offered, the processes are run, internally analyzing each relevant part of the solution.</p>
-                    <p>I hope you like this proposal. Thank you very much.</p>
+                    <p>I hope you like this proposal.</p>
+                    <p>Thank you very much.</p>
                 </div>
             </article>        
         </div>
