--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             <h2 class="section-title">
                 Demos
             </h2>
+            <h4 class="section-sub-title">Posicione el mouse sobre la imagen de la izquierda para ver las teconologías implicadas en cada Demo. Presión click sobre la misma para acceder a la documentación.</h4>
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-1" class="demo-card">
                     <img src="assets/minidev.jpg" alt="Demo #1">
@@ -162,10 +163,19 @@
                  </div>
                 </aside>
             </a>
-            <video width="100%" height="auto" controls class="video-area">
-                <source src="assets/es/demo2.mov" type="video/mp4">
-                Tu navegador no soporta la exposicion de video.
-            </video>   
+            <div class="text-area">
+                <p>El presente demo desarrolla una versión reducida de un <b>panel de ventas</b>. </p>
+                <p>Contiene dos sencillas <b>funcionalidades</b>:</p>
+                <ul>
+                    <li><b>Dashboard</b></li>
+                    <li><b>Administración de información de sucursales y vendedores</b></li>
+                </ul>
+                <p>El <b>foco</b> esta puesta en la expansión de la base tecnológica presentada en el primer demo de esta página. </p>
+                <p>La propuesta nos ofrece un <b>variado menú de tecnologías</b> que han sido integradas para brindar la presente solución. </p>
+                <p>Se presenta desde la visión global de la arquitectura aplicativa hasta detalles de implementación, explicando en cada paso como se han aplicado las tecnologías de software utilizadas tanto en el BackEnd, como en el FrontEnd.</p>
+                <p>Espero que esta propuesta sea de tu agrado. </p>
+                <p>Muchas gracias.</p>
+            </div>   
             </article>
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-3" class="demo-card">
@@ -189,7 +199,8 @@
                     <p>El demo presenta una introducción que provee un marco temático y tecnológico, para luego avanzar sobre la aplicación de diversas tecnologías que se encuentran aplicadas.</p>
                     <p>Se tratarán los temas tanto a nivel conceptual, como a nivel código de programación, realizando a tal efecto pruebas de funcionamiento.</p>
                     <p>Como cierre obtendremos una aplicación básica operativa en el entorno de desarrollo.</p>
-                    <p>Espero que esta propuesta sea de tu agrado. Muchas gracias.</p>
+                    <p>Espero que esta propuesta sea de tu agrado.</p>
+                    <p>Muchas gracias.</p>
                 </div>  
             </article>
             <article class="demos-space demo-lg-block demo-article">
@@ -212,7 +223,8 @@
                     <p>Para soportar esta funcionalidad, hemos creado tres aplicaciones que interactúan entre sí, las cuales se comunican mediante <b>Sockets</b> y <b>REST APIs</b>.</p>
                     <p>Al posicionarnos en la parte izquierda de la pantalla se expondrá una lista de las tecnologías implicadas en este demo. Al realizar click sobre la imagen se mostrarán los links al canal de youtube y al repositorio de GitHub. Podrán hacer click sobre los mismos para acceder en forma directa.</p>
                     <p>El demo presenta una introducción a la idea a desarrollar. Luego se ofrece una vista de la arquitectura aplicativa, dando lugar a la presentación técnica de la solución a alto nivel, para finalmente hacer funcionar la misma,  analizando internamente cada parte relevante de la misma y su comportamiento</p>
-                    <p>Espero que esta propuesta sea de tu agrado. Muchas gracias.</p>
+                    <p>Espero que esta propuesta sea de tu agrado.</p>
+                    <p>Muchas gracias.</p>
                 </div>        
             </article>
             <article class="demos-space demo-lg-block demo-article">
@@ -236,7 +248,8 @@
                     <p>Para soportar esta funcionalidad, hemos creado cuatro aplicaciones que interactúan entre sí, las cuales se comunican mediante Kafka y REST APIs.</p>
                     <p>Al posicionarnos en la parte izquierda de la pantalla se expondrá una lista de las tecnologías implicadas en este demo. Al realizar click sobre la imagen se mostrarán los links al canal de youtube y al repositorio de GitHub. Podrán hacer click sobre los mismos para acceder en forma directa.</p>
                     <p>El demo presenta una introducción a la idea a desarrollar. Luego se ofrece una vista de la arquitectura aplicativa, se realiza la corrida de los procesos, analizando los resultados e internamente cada parte relevante de la solución, presentando casos de éxito y explorando diferentes situaciones de fallos y de recuperación ante los mismos.</p>
-                    <p>Espero que esta propuesta sea de tu agrado. Muchas gracias.</p>
+                    <p>Espero que esta propuesta sea de tu agrado.</p>
+                    <p>Muchas gracias.</p>
                 </div>            
             </article>        
             <article class="demos-space demo-lg-block demo-article">
@@ -260,7 +273,8 @@
                     <p>Para soportar esta funcionalidad, hemos creado dos aplicaciones que interactúan entre sí, las cuales se comunican mediante REST APIs, una resuelve la parte del BackEnd y otra el FrontEnd.</p>
                     <p>Al posicionarnos en la parte izquierda de la pantalla se expondrá una lista de las tecnologías implicadas en este demo. Al realizar click sobre la imagen se mostrarán los links al canal de youtube y al repositorio de GitHub. Podrán hacer click sobre los mismos para acceder en forma directa.</p>
                     <p>El demo presenta una introducción a la idea a desarrollar. Luego se ofrece una vista de la arquitectura aplicativa, se realiza la corrida de los procesos, analizando internamente cada parte relevante de la solución.</p>
-                    <p>Espero que esta propuesta sea de tu agrado. Muchas gracias.</p>
+                    <p>Espero que esta propuesta sea de tu agrado.</p>
+                    <p>Muchas gracias.</p>
                 </div>            
             </article>        
         </div>
